--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
     <body>
         <h1>Hello World, I'm here!</h1>
         <h2>Baru mulai belajar HTML nih :)</h2>
+        <h2>stres, otak mulai panas '-'</h2>
     </body>
 </html>
